--- a/recipes/style.css
+++ b/recipes/style.css
@@ -22,8 +22,8 @@ body {
     background-color: var(--peach);
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-self: center;
+    /* justify-content: center; */
+    /* align-self: center; */
 }
 
 #card {
@@ -48,22 +48,21 @@ body {
 
 #content, #title, #pic, #description, #preparationTime, #ingredients , #instruction, #nutrition {
     width: 900px;
-    /* overflow: hidden; */
+    overflow: hidden;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    /* align-content: stretch; */
+    justify-content: center;
 }
 
 h2{
     color: var(--intenseBrown);
     font-size: 1.8em;
+    /* margin-bottom: 8px; */
 
 }
 
 #content  h2{
     font-weight: bold;
-    /* font-size: 1.4em; */
 }
 
 #content {
@@ -72,7 +71,6 @@ h2{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-self: center;
 }
 
 #content > #pic > img {
@@ -80,30 +78,25 @@ h2{
     height: 500px;
     width: 900px;
     border-radius: 35px;
-    /* border: 2px solid black; */
     overflow: hidden;
-
 }
 
 #title h1 {
     font-size: 2.4em;
     font-style: italic;
     height: 80px;
-    /* border: 1px solid red; */
 }
 
 #description {
     height: 100px;
     color: var(--intenseGreen);
-    /* border: 1px solid green; */
-
 }
 
 #preparationTime {
     height: 150px;
     border-radius: 20px;
     padding: 30px;
-    width: 800px;
+    width: 900px;
     align-self: center;
     background-color: var(--rose);
 }
@@ -118,9 +111,6 @@ h2{
     font-weight: bold;
     list-style-position: inside;
     color: var(--intenseGreen);
-
-    /* padding: 10px; */
-
 }
 
 #preparationTime span{
@@ -128,41 +118,28 @@ h2{
 }
 
 #ingredients {
-    /* border: 1px solid limegreen; */
-    height: 460px;
+    height: 310px;
     color: var(--intenseGreen);
     list-style-position: inside;
-    border-bottom: 1px solid var(--intenseGray);
-    /* justify-content: stretch; */
-
-
+    /* border-bottom: 1px solid var(--intenseGray); */
 }
-/* 
-#ingredients h2{
-    margin-bottom: 20px;
-
-} */
 
 #ingredients ul{
     padding-left: 20px;
-
 }
 
 #instruction {
-    height: 480px;
+    height: 400px;
     color: var(--intenseGreen);
     list-style-position: inside;
-    /* justify-content: stretch; */
     border-bottom: 1px solid var(--intenseGray);
+    border-top: 1px solid var(--intenseGray);
 
 }
 
 #instruction li{
-    /* color: var(--intenseRed); */
-    /* font-weight: bold; */
     list-style-position: inside;
     padding-left: 10px;
-
 }
 
 #instruction li::marker{
@@ -170,35 +147,32 @@ h2{
     font-weight: bold;
     list-style-position: inside;
     padding-left: 20px;
-
 }
 
 #nutrition {
-    /* border: 1px solid orange; */
-    height: 230px;
+    height: 280px;
     color: var(--intenseGreen);
-    /* display: flex; */
-    display: flex;
-    justify-content: center;
-    /* margin-bottom: 0px; */
+/* display: flex; */
+/* flex-direction: row; */
 }
 
-#nutrition p{
-    border-bottom: 1px solid var(--intenseGray);
+#nutrition .nutrition {
     display: flex;
-    justify-content: center;
-    /* flex-direction: column; */
+    flex-direction: row;
+   justify-content: space-evenly;
+   align-items:flex-start;
+   margin-bottom: 3px;
+   margin-top: 3px;
 
+   border-bottom: 1px solid var(--intenseGray);
 
 }
 
-#nutrition span{
+
+
+/* #nutrition div{
     color: var(--intenseRed);
     font-weight: bold;
     list-style-position: inside;
     padding-left: 200px;
-    display: flex;
-    justify-content: center;
-
-
-}
+} */
