--- a/style.css
+++ b/style.css
@@ -1,14 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 * {
     padding: 0;
     margin: 0;
 }
 
 :root {
+    --peach: rgba(255, 197, 89, 0.555);
+    --intenseRed: rgb(104, 49, 49);
+
     --black: rgba(119, 103, 103, 0.486);
     --red: rgb(245, 0, 0);
     --blue: rgb(4, 0, 245);
     --orange: rgb(245, 147, 0);
-    --yellow: rgb(252, 255, 57);
+    /* --yellow: rgb(252, 255, 57); */
     box-sizing: border-box;
 
 
@@ -19,19 +24,27 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-self: center;
+    align-items: center;
+    background-color: var(--peach);
+    font-family: "Noto Sans", sans-serif;
 }
 
-main {
+.parent {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-self: center;
+    align-items: center;
+    width: 1200px;
+    height: 1000px;
+    margin: 300px;
 }
 
+
 h1{
-    font-size: 1rem;
-    width: 40px;
+    font-size: 7rem;
+    color: var(--intenseRed);
+
+    /* width: 40px; */
 }
 
 /*CHILD AND SIBLING COMBINATORS*/
@@ -39,115 +52,60 @@ h1{
 main div {
     display: flex;
     flex-direction: column;
-    width: 300px;
-    height: 400px;
-    border :7px solid var(--red);
     justify-content: center;
+    border-bottom: 30px;
 
 }
 
 /* This rule will only select divs with a class of child */
 main > div {
-    /* Our cool CSS */
-    border :5px solid var(--blue);
-    /* width: 200px;
-    height: 300px; */
-
+    border :3px solid var(--intenseRed);
+    margin: 10px;
+    padding: 10px;
+    border-radius: 45px;
+    width: 1100px;
+    height: 200px;
 }
 
-/* This rule will only select divs with a class of grand-child */
-main > div > div {
-    background-color : var(--orange);
-    width: 200px;
-    height: 300px;
-    align-self: center;
-} 
-
-/* This rule will only select the div with the class child group2 */
-.group1 + div {
-  border-radius: 10%;
-}
-  
-/* This rule will only select the div with the class child group3 */
-.group1 + div + div {
-    border-radius: 40%;
-}
-
-/* This rule will select all of .group1's siblings - in this case the 2nd and 3rd .child divs */
-.group1 ~ div {
-   background-color: var(--black);
-}
-
-/* This rule will apply to all links */
-a {
-    text-decoration: underline;
+.parent {
+    position: relative;
+    text-align: center;
     color: black;
+  }
+
+
+
+.firstRecipe {
+    background-image: url('https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4531443.jpg&q=60&c=sc&poi=auto&orient=true&h=512');
+    opacity: 0.4;
+    width: 1100px;
+    height: 200px;
+    border-radius: 45px;
 }
 
-/* This will apply to unvisited links */
-a:link {
-    color: var(--blue);
+.secondRecipe {
+    background-image: url('https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F1217931.jpg&q=60&c=sc&poi=auto&orient=true&h=512');
+    opacity: 0.4;
+    width: 1100px;
+    height: 200px;
+    border-radius: 45px;
 }
 
-/* And you guessed it, this applies to all links the user has clicked on */
-a:visited {
-    color: var(--red);
+.thirdRecipe {
+    background-image: url('https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9186689.jpg&q=60&c=sc&poi=auto&orient=true&h=512');
+    opacity: 0.4;
+    width: 1100px;
+    height: 200px;
+    border-radius: 45px;
+
 }
 
-/*PSEUDO - CLASE*/
-div:first-child  {
-    background-color: var(--yellow);
-}
-
-div:last-child {
-    background-color: var(--orange);
-}
-
-p:empty {
-    background: var(--orange);
-    width: 100px;
-    height: 20px;
-}
-
-/* :only-child
-
-:nth-child */
-
-/*PSEUDO - ELEMENTS*/
-::marker {
-    color: var(--orange);
-    font-size: 50px;
-    padding: 30px;
-    margin: 30px;
-}
-
-li::first-letter{
-    text-transform: uppercase;
-    font-size: xx-large;
-}
-
-li::first-line{
-    background: var(--black);
-}
-
-::selection {
-    background: var(--black);
-    color: var(--yellow);
-}
-
-li::before {
-    content: '😎 🥸 🤓';
-}
-
-li::after {
-    content: '🤓 🥸 😎';
-}
-
-/*ATTRIBUTE SELECTORS*/
 
 
-
-
-
-
-/*em or rem for font-size instead of px, for the rest use px*/
+.re {
+    position: absolute;
+    border: 2px solid red;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
