--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
     justify-content: center;
     align-items: center;
     width: 1200px;
-    height: 1000px;
+    height: 915px;
     margin: 300px;
 }
 
@@ -115,4 +115,16 @@ h1:hover{
  
 .recipeTitle:active {
     color: var(--intenseRed);
+}
+
+footer {
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    background-color: var(--intenseBrown);
+    color:var(--peach);
+    margin-top: 84px;
 }
