--- a/style.css
+++ b/style.css
@@ -33,14 +33,14 @@ body {
     margin: 300px;
 }
 
-main div {
+section div {
     display: flex;
     flex-direction: column;
     justify-content: center;
     border-bottom: 30px;
 }
 
-main > div {
+section > div {
     border : 3px solid var(--intenseBrown);
     margin: 10px;
     padding: 10px;
@@ -94,7 +94,6 @@ h1:hover{
 .firstRecipe:hover, .secondRecipe:hover, .thirdRecipe:hover{
     opacity: 1;
 }
-
 
 .recipeTitle{
     font-family: "Noto Sans", sans-serif;
